--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <testngXML>MainNavigationSuit.xml</testngXML>
+        <testngXML>ContactUsPageTestSuite.xml</testngXML>
     </properties>
 
     <dependencies>
@@ -43,6 +43,14 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 2.9.1 for Java 7 projects -->
+            <version>3.11.1</version>
+            <scope>test</scope>
         </dependency>
 
 
